Workspace page and minor changes

--- a/src/components/Navigation/Navbar.css
+++ b/src/components/Navigation/Navbar.css
@@ -10,6 +10,10 @@
     color: white !important;
 }
 
+.navbar {
+    z-index: 50;
+    position: absolute;
+}
 
 .nav-brand {
     text-decoration: none;
