--- a/src/components/Views/Blocks/GlassBox.css
+++ b/src/components/Views/Blocks/GlassBox.css
@@ -1,6 +1,7 @@
 :root {
     --background-color: black;
     --text-color: white;
+    --border-color: grey;
 }
 
 .box-container {
@@ -8,7 +9,7 @@
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.25);
+    border: 1px solid var(--border-color);
     background-color: var(--background-color);
     color: var(--text-color);
 
