--- a/src/components/Views/Blocks/Maps.css
+++ b/src/components/Views/Blocks/Maps.css
@@ -40,18 +40,18 @@
     border-radius: 5rem;
 }
 
-#cluster-map,
-#minimap {
+#cluster-map {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.minimap-container {
+/* .minimap-container {
     position: relative;
     width: 25rem;
     height: 25rem;
     border-radius: 6rem;
-    /* padding: 3rem; */
-    background-color: #303030;
-}
+    background-color: rgba(0, 0, 0, 0)
+    }
+    
+    */
