--- a/src/components/Views/Blocks/Maps.css
+++ b/src/components/Views/Blocks/Maps.css
@@ -50,8 +50,8 @@ padding-inline: 2rem;
 overflow-y: scroll;
 
 /* justify-content: start; */
-background-color: rgb(159, 159, 159);
-transition: all 1s ease-in-out;
+background-color: rgb(32, 32, 32);
+transition: flex-basis 1s ease-in-out;
 }
     
     .drawer-open #cluster-map {
@@ -76,10 +76,11 @@ transition: all 1s ease-in-out;
 }
         
 
+
 #minimap {
-    width: 90%;
-    height: 90%;
-    border-radius: 5rem;
+    width: 100%;
+    height: 100%;
+    border-radius: 2rem;
 }
 
 #cluster-map {
@@ -88,15 +89,15 @@ transition: all 1s ease-in-out;
     transform: translate(-50%, -50%);
 }
 
-/* .minimap-container {
+.minimap-container {
     position: relative;
-    width: 25rem;
-    height: 25rem;
-    border-radius: 6rem;
-    background-color: rgba(0, 0, 0, 0)
+    width: 75%;
+    aspect-ratio: 1/1;
+    /* border-radius: 6rem; */
+    /* background-color: rgba(0, 0, 0, 0) */
     }
     
-    */
+   
 
 .popup-container{
     padding: 0.5rem;
