button target and viewport organizations part 1
button target option added and new system for getting all organizations in map viewport. Returns as a string[] of organization ids when the map is done moving or has just loaded

--- a/src/components/Views/Blocks/Maps.css
+++ b/src/components/Views/Blocks/Maps.css
@@ -31,51 +31,27 @@
         position: relative;
 }
 
-#cluster-map {
+.cluster-map-container #cluster-map {
 height: 100%;
-width: 100%;
-    /* flex: 1 2 100%; */
-        /* justify-content: end; */
+flex: 1 1 60%;
+left: 30%;
         transition: all 1s ease-in-out;
     }
     
-#selected-workspaces {  
+.cluster-map-container #selected-workspaces {  
 height: 100%;
-width: 0;
-flex: 2 1 0%;
+flex: 1 1 40%;
 
 padding-top: 5rem;
 padding-inline: 2rem;
 
-overflow-y: scroll;
+overflow-y: auto;
+overflow-x: hidden;
 
 /* justify-content: start; */
 background-color: rgb(32, 32, 32);
 transition: flex-basis 1s ease-in-out;
-}
-    
-    .drawer-open #cluster-map {
-        left: 30%;
-        flex-basis: 60%;
-    }
-    
-    .drawer-open #selected-workspaces {
-        /* width: 40vw; */
-        flex-basis: 40%;
-    }
-    
-    .drawer-closed #cluster-map {
-        left: 50%;
-        flex-basis: 100%;
-        width: 100%;
-    }
-    
-.drawer-closed #selected-workspaces {
-    flex-basis: 0%;
-    width: 0;
-}
-        
-
+}   
 
 #minimap {
     width: 100%;
@@ -96,8 +72,6 @@ transition: flex-basis 1s ease-in-out;
     /* border-radius: 6rem; */
     /* background-color: rgba(0, 0, 0, 0) */
     }
-    
-   
 
 .popup-container{
     padding: 0.5rem;
