--- a/src/components/Views/Blocks/WorkspaceBox.css
+++ b/src/components/Views/Blocks/WorkspaceBox.css
@@ -6,3 +6,14 @@
     margin-bottom: 1rem;
     padding: 1rem 2rem;
 }
+.modal-container {
+    width: 90%;
+    height: 90%;
+    overflow: auto;
+    background-color: #121212 !important;
+}
+
+.modal-body {
+    width: 100%;
+    height: 100%;
+}
