--- a/src/components/Views/Blocks/WorkspaceBox.css
+++ b/src/components/Views/Blocks/WorkspaceBox.css
@@ -1,10 +1,21 @@
-:root {
-    --secondary-gradient: none;
-}
-
 .workspace-box {
     margin-bottom: 1rem;
-    padding: 1rem 2rem;
+    cursor: pointer;
+    }
+    
+    .workspace-box .box-content-container {
+        color: white;
+    }
+    
+    .workspace-box .img-container {
+        width: 100%;
+    }
+    
+    .img-container img {
+        border-radius: 1rem;
+        width: 100%;
+        aspect-ratio: 1;
+        object-fit: cover;
 }
 .modal-container {
     width: 90%;
