added new data implementation and changed organization data

--- a/src/components/Views/Pages/Workspace.css
+++ b/src/components/Views/Pages/Workspace.css
@@ -28,3 +28,11 @@
   .hours-table{
     font-size: 1.4rem;
   }
+.reviewContainer {
+    height: 30rem;
+    overflow-y: scroll;
+}
+
+.reviewContainer>* {
+    margin-top: 1rem;
+}
