--- a/src/components/Views/Blocks/Maps.css
+++ b/src/components/Views/Blocks/Maps.css
@@ -86,19 +86,19 @@ transition: flex-basis 1s ease-in-out;
 }
 
 .popup-hover-container {
-    padding: 0.5rem;
     text-align: center;
 }
 
 .popup-hover-heading {
     font-size: 1.1rem;
-    padding-bottom: 0.25rem;
 }
 
-.popup-hover-address {
+/* .popup-hover-address {
     font-weight: 300;
     font-size: 0.85rem;
 }
+
+*/
 
 .popup-description{
     font-weight: 300;
